fix(post): text overflows when the length of the text is large
fix #5

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,6 +14,10 @@
 	--step-5: clamp(2.8rem, calc(2.45rem + 1.77vw), 3.82rem);
 }
 
+* {
+	-webkit-text-size-adjust: none;
+}
+
 body {
 	font-family: 'Exo 2', serif, system-ui, -apple-system, BlinkMacSystemFont,
 		'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
